[package]
version = "0.0.1"
name = "regmock-rs"
edition = "2021"
authors = ["Botzner Andreas (IFAT DCGR CSS DSI D SW FA SA)"]
description = "Rust implementation of regmock for pacgen PACs."
documentation = "https://example.com"

[lib]
name = "regmock_rs"
path = "src/lib.rs"

[dependencies]
derive_builder = "0.12.0"
itertools = "0.11.0"
log = "0.4.19"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"

[dev-dependencies]
closure = "0.3.0"

[dev-dependencies.generic-pac]
path = "./test_crates/generic-pac"
features = ["all", "tracing"]

[features]
aurix = []
default = []
