[package]
version = "0.1.0"
name = "regmock-rs"
edition = "2021"
authors = ["Andreas Wallner", "Andreas Botzner"]
description = "Rust implementation of regmock for pacgen PACs."
license = "MIT"
keywords = ["embedded", "testing", "unittest"]
categories = ["development-tools::testing", "embedded"]
readme = "README.md"
repository = "https://github.com/infineon/regmock-rs"

[lib]
name = "regmock_rs"
path = "src/lib.rs"

[dependencies]
derive_builder = "0.12.0"
itertools = "0.11.0"
log = "0.4.19"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"

[dev-dependencies]
closure = "0.3.0"

[dev-dependencies.test-pac]
path = "./test-pac"
features = ["all", "tracing"]

[features]
aurix = []
default = []
